; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_tps6524x-regulator.c_read_reg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_tps6524x-regulator.c_read_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tps6524x = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tps6524x*, i32)* @read_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_reg(%struct.tps6524x* %0, i32 %1) #0 {
  %3 = alloca %struct.tps6524x*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.tps6524x* %0, %struct.tps6524x** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.tps6524x*, %struct.tps6524x** %3, align 8
  %7 = getelementptr inbounds %struct.tps6524x, %struct.tps6524x* %6, i32 0, i32 0
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.tps6524x*, %struct.tps6524x** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @__read_reg(%struct.tps6524x* %9, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.tps6524x*, %struct.tps6524x** %3, align 8
  %13 = getelementptr inbounds %struct.tps6524x, %struct.tps6524x* %12, i32 0, i32 0
  %14 = call i32 @mutex_unlock(i32* %13)
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @__read_reg(%struct.tps6524x*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
